--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,20 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@expo/webpack-config": "^19.0.0",
     "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "expo": "~49.0.14",
+    "expo-image-picker": "~14.3.2",
     "express": "^5.1.0",
     "openai": "^5.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.10",
     "react-native-web": "~0.19.6",
-    "uuid": "^11.1.0",
-    "expo-image-picker": "~14.3.2"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
