--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,19 +16,20 @@
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "expo": "~49.0.14",
-    "expo-image-picker": "~14.3.2",
+    "expo": "^53.0.0",
+    "expo-constants": "~17.1.6",
+    "expo-image-picker": "~16.1.4",
     "express": "^5.1.0",
     "openai": "^5.7.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.72.10",
-    "react-native-web": "~0.19.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.4",
+    "react-native-web": "^0.20.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "jest": "^29.0.0",
+    "@babel/core": "^7.26.0",
+    "jest": "~29.7.0",
     "react-test-renderer": "18.2.0"
   }
 }
