--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,8 @@
     "expo": "^53.0.0",
     "expo-constants": "~17.1.6",
     "expo-image-picker": "~16.1.4",
+    "expo-notifications": "~0.24.0",
+    "expo-server-sdk": "^4.0.0",
     "express": "^5.1.0",
     "openai": "^5.7.0",
     "react": "19.0.0",
