--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
     "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/bottom-tabs": "^7.4.2",
     "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
