--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,8 @@
     "expo-constants": "~17.1.6",
     "expo-image-picker": "~16.1.4",
     "expo-notifications": "~0.31.3",
+    "expo-location": "~15.0.1",
+    "react-native-webview": "^13.8.4",
     "expo-server-sdk": "^3.6.0",
     "express": "^5.1.0",
     "openai": "^5.7.0",
