--- a/mobile/package.json
+++ b/mobile/package.json
@@ -39,7 +39,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.10",
     "react-native-webview": "^13.8.4",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "react-native-maps": "^1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
