--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,33 +14,35 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^6.5.14",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "@supabase/supabase-js": "^2.50.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@supabase/supabase-js": "^2.50.2",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "event-source-polyfill": "^1.0.31",
-    "expo": "^53.0.0",
+    "expo": "^53.0.13",
     "expo-constants": "~17.1.6",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~15.0.1",
-    "expo-notifications": "~0.31.3",
+    "expo-notifications": "^0.31.3",
     "expo-server-sdk": "^3.6.0",
     "express": "^5.1.0",
+    "leaflet": "^1.9.4",
     "openai": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.79.4",
-    "react-native-gesture-handler": "^2.12.0",
+    "react-leaflet": "^5.0.0",
+    "react-native": "^0.79.4",
+    "react-native-gesture-handler": "^2.26.0",
+    "react-native-maps": "^1.7.1",
     "react-native-reanimated": "^2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.22.0",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "^3.37.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.18.10",
+    "react-native-web": "^0.18.12",
     "react-native-webview": "^13.8.4",
-    "uuid": "^11.1.0",
-    "react-native-maps": "^1.7.1"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
